# harvester-curator

./: .gitignore  CITATION.cff  Documentation.docx  README.md  __init__.py  author_name.xml  citation.cff  cli.py  codemeta.json  crawler.py  harvester_from_xml.py  pyproject.toml  requirements.txt  setup.py  some_doc.md  test_HC_python3_12.ipynb  tox.ini  usage_example_colab.ipynb
.github/workflows/: publish_release.yml
Example/: citation.txt
XML_harvester/: harvester_from_xml.py
curator/: check_attri.py  citation_meta_ex.json  collect_md_attri.py  curate_for_darus.py  curation.ipynb  curation.py  curation_test.py  curator.py  dataset_upload.py  dataset_upload_test.py  example_curation.py  find_valid_md_fields.py  harvested_metadata_example.json  harvester_output.json  imp_map.py  mapping.json  md_com.json  md_schema_api_endpoints.json  parser.py  test.py  test_curation.ipynb  test_curation.py  test_metadata_example.json
curator/api_end_points/: darus_md_schema_api_endpoints.json
curator/metadata_schema_DaRUS/: citation.json  engMeta.json
documentation/: doc.md
example/: book.xml  codemeta.json  harvester_output.json  md_com.json  pressure_20.pvtr
example/curator_output/: md_com.json
example/curator_related/: harvested_metadata_example.json  run_curator_example.ipynb
harvester/: citation_meta_ex.json  crawler.py  file_group.py  generate_codemeta.py  harvester.py  harvester_output.json  parser.py  run_harvester_example.ipynb  utils.py
harvester_curator/: __init__.py  cli.py  requirements.txt
output/: curated_output.json  harvested_output.json
(+36 files in other folders)
